# gdb-mcp-server

./: .gitignore  CLAUDE.md  DEBUGGING_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  gdb_cli_client.py  gdb_client.py  gdb_loader.py  gdb_tools.py  http_server.py  mcp_server.py  pyproject.toml  requirements.txt  run_mcp.sh  run_server.py  smithery.yaml  test_http_client.py
comm_methods/: __init__.py  applescript_comm.py  gdb_communicator.py  keyboard_comm.py  pexpect_comm.py  tmux_comm.py
examples/: README.md  debug_demo.py  test_program.c
